<resources>
    <string name="app_name">Simple Boggle</string>
    <string name="enter_a_word_then_hit_submit">Enter a word then hit submit</string>
    <string name="empty_space">" "</string>
    <string name="submit">Submit</string>
    <string name="clear">Clear</string>
    <string name="user_input">User Input</string>
    <string name="new_game">New Game</string>
    <string name="score">Score:</string>
</resources>