<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    android:background="@drawable/small_border">

    <TextView
        android:id="@+id/instructionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_a_word_then_hit_submit"
        android:textColor="#000000"
        android:textSize="16sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"/>

    <LinearLayout
        android:id="@+id/buttonsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="8dp">


        <Button
            android:id="@+id/button1"
            android:layout_width="50dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:text="@string/empty_space"
            android:textSize="20sp"
            android:textColor="#000000"
            android:layout_marginEnd="8dp"
            android:background="@drawable/small_border" />

        <Button
            android:id="@+id/button2"
            android:layout_width="50dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:text="@string/empty_space"
            android:textSize="20sp"
            android:textColor="#000000"
            android:layout_marginEnd="8dp"
            android:background="@drawable/small_border" />

        <Button
            android:id="@+id/button3"
            android:layout_width="50dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:text="@string/empty_space"
            android:textSize="20sp"
            android:textColor="#000000"
            android:layout_marginEnd="8dp"
            android:background="@drawable/small_border" />

        <Button
            android:id="@+id/button4"
            android:layout_width="50dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:text="@string/empty_space"
            android:textSize="20sp"
            android:textColor="#000000"
            android:layout_marginEnd="8dp"
            android:background="@drawable/small_border" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttonsLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="8dp">

        <Button
            android:id="@+id/button5"
            android:layout_width="50dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:text="@string/empty_space"
            android:textSize="20sp"
            android:textColor="#000000"
            android:layout_marginEnd="8dp"
            android:background="@drawable/small_border" />

        <Button
            android:id="@+id/button6"
            android:layout_width="50dp"
            android:layout_height="100dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:background="@drawable/small_border"
            android:text="@string/empty_space"
            android:textColor="#000000"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button7"
            android:layout_width="50dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:text="@string/empty_space"
            android:textSize="20sp"
            android:textColor="#000000"
            android:layout_marginEnd="8dp"
            android:background="@drawable/small_border" />

        <Button
            android:id="@+id/button8"
            android:layout_width="50dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:text="@string/empty_space"
            android:textSize="20sp"
            android:textColor="#000000"
            android:layout_marginEnd="8dp"
            android:background="@drawable/small_border" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttonsLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="8dp" >

        <Button
            android:id="@+id/button9"
            android:layout_width="50dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:text="@string/empty_space"
            android:textSize="20sp"
            android:textColor="#000000"
            android:layout_marginEnd="8dp"
            android:background="@drawable/small_border" />

        <Button
            android:id="@+id/button10"
            android:layout_width="50dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:text="@string/empty_space"
            android:textSize="20sp"
            android:textColor="#000000"
            android:layout_marginEnd="8dp"
            android:background="@drawable/small_border" />

        <Button
            android:id="@+id/button11"
            android:layout_width="50dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:text="@string/empty_space"
            android:textSize="20sp"
            android:textColor="#000000"
            android:layout_marginEnd="8dp"
            android:background="@drawable/small_border" />

        <Button
            android:id="@+id/button12"
            android:layout_width="50dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:text="@string/empty_space"
            android:textSize="20sp"
            android:textColor="#000000"
            android:layout_marginEnd="8dp"
            android:background="@drawable/small_border" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttonsLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="8dp" >

        <Button
            android:id="@+id/button13"
            android:layout_width="50dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:text="@string/empty_space"
            android:textSize="20sp"
            android:textColor="#000000"
            android:layout_marginEnd="8dp"
            android:background="@drawable/small_border" />

        <Button
            android:id="@+id/button14"
            android:layout_width="50dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:text="@string/empty_space"
            android:textSize="20sp"
            android:textColor="#000000"
            android:layout_marginEnd="8dp"
            android:background="@drawable/small_border" />

        <Button
            android:id="@+id/button15"
            android:layout_width="50dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:text="@string/empty_space"
            android:textSize="20sp"
            android:textColor="#000000"
            android:layout_marginEnd="8dp"
            android:background="@drawable/small_border" />

        <Button
            android:id="@+id/button16"
            android:layout_width="50dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:text="@string/empty_space"
            android:textSize="20sp"
            android:textColor="#000000"
            android:layout_marginEnd="8dp"
            android:background="@drawable/small_border" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="8dp">

        <Button
            android:id="@+id/submit_button"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/submit"
            android:textSize="20sp"
            android:textColor="#000000"
            android:background="@drawable/clear_and_submit_border"
            android:layout_marginEnd="8dp"/>

        <Button
            android:id="@+id/clear_button"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/clear"
            android:textSize="20sp"
            android:textColor="#000000"
            android:background="@drawable/clear_and_submit_border"
            android:layout_marginEnd="8dp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/userInputTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="8dp"
        android:padding="8dp"
        android:text="@string/user_input"
        android:textColor="@color/black"
        android:textSize="16sp" />

</LinearLayout>
